backup/masterpackage-retrieve/unpackaged/unpackaged/objects/Debit_Order_Tracking__e.object
<CustomObject>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>Action type Allowed : Create, Edit, Delete</description>
        <label>ActionType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Cause_Code__c</fullName>
        <label>Confirmation Cause Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOI_Not_Onboarded__c</fullName>
        <label>DOI Not Onboarded</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOI_Sub_Name__c</fullName>
        <label>DOI Sub Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Order_Date__c</fullName>
        <label>Debit Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>EventName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Debit_Order_Initiator_ID__c</fullName>
        <label>External Debit Order Initiator ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Debit_Order_Initiator_Name__c</fullName>
        <label>External Debit Order Initiator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Issue__c</fullName>
        <label>Other Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Comms__c</fullName>
        <label>Preferred Comms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceId__c</fullName>
        <label>SalesforceId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Cause_Code__c</fullName>
        <label>Submitted Cause Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Capitec_Account__c</fullName>
        <label>To Capitec Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Cause_Code__c</fullName>
        <label>Withdrawn Cause Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Debit Order Tracking</label>
    <pluralLabel>Debit Orders Tracking</pluralLabel>
</CustomObject>